[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/examples/accept-dialog/accept-dialog.gd" type="Script" id=1]

[node name="Accept Dialog" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 68.0
margin_top = 70.0
margin_right = 200.0
margin_bottom = 114.0

[node name="ShowDialogButton" type="Button" parent="VBoxContainer"]
margin_right = 132.0
margin_bottom = 20.0
text = "Show Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowModalDialogButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 132.0
margin_bottom = 44.0
text = "Show Modal Dialog"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseLabel" type="Label" parent="."]
margin_left = 224.0
margin_top = 71.0
margin_right = 424.0
margin_bottom = 111.0
rect_min_size = Vector2( 200, 40 )
valign = 1

[node name="AcceptDialog" type="AcceptDialog" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 631.0
margin_bottom = 314.0
popup_exclusive = true
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ShowDialogButton" to="." method="_on_ShowDialogButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShowModalDialogButton" to="." method="_on_ShowModalDialogButton_pressed"]
[connection signal="about_to_show" from="AcceptDialog" to="." method="_on_AcceptDialog_about_to_show"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="popup_hide" from="AcceptDialog" to="." method="_on_AcceptDialog_popup_hide"]
